# cpp-training-season1

./: README.md
argwrap/: CMakeLists.txt
argwrap/src/: argwrap.hpp  main.cpp
iterators/: CMakeLists.txt
iterators/src/: main.cpp
reflection/: CMakeLists.txt
reflection/src/: main.cpp  reflect.cpp  reflect.hpp
ti-serialization/: CMakeLists.txt
ti-serialization/src/: main.cpp  serialization.h
